# vt-everything-plugin

./: Cargo.toml
src/: lib.rs
