[package]
name = "voidtools-everything-plugin"
version = "0.1.0"
edition = "2021"

[lib]
name = "voidtools_everything_plugin"
crate-type = ["cdylib",'rlib']

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-search-lib = { git = "https://github.com/quick-search-rs/quick-search-lib" }
abi_stable = "0.11.3"
log = "0.4.20"
everything-sys = { git = "https://github.com/Ciantic/everything-sys-rs" }
widestring = "1.0.2"
opener = "0.6.1"

[profile.release]
lto = true
codegen-units = 1
opt-level = "z" 
